@@ -1,28 +1,1 @@
-<!-- wp:group {"align":"full","layout":{"inherit":true}} -->
-<div class="wp-block-group alignfull">
-    <!-- wp:columns {"isStackedOnMobile":false,"className":"justify-content-between"} -->
-    <div class="wp-block-columns is-not-stacked-on-mobile justify-content-between">
-        <!-- wp:column {"verticalAlignment":"center","className":"col-auto col-md-4"} -->
-        <div class="wp-block-column is-vertically-aligned-center col-auto col-md-4">
-            <!-- wp:social-links {"iconColor":"primary","style":{"spacing":{"blockGap":{"left":"var:preset|spacing|xs"}}},"className":"is-style-logos-only my-0"} -->
-            <ul class="wp-block-social-links has-icon-color is-style-logos-only my-0">
-                <!-- wp:social-link {"url":"https://wordpress.org/themes/wecodeart/","service":"wordpress"} /-->
-                <!-- wp:social-link {"url":"https://www.facebook.com/mvbican/","service":"facebook"} /-->
-            </ul>
-            <!-- /wp:social-links -->
-        </div>
-        <!-- /wp:column -->
-        <!-- wp:column {"verticalAlignment":"center","className":"col-auto"} -->
-        <div class="wp-block-column is-vertically-aligned-center col-auto">
-            <!-- wp:site-logo {"align":"center","width":60} /-->
-        </div>
-        <!-- /wp:column -->
-        <!-- wp:column {"verticalAlignment":"center","className":"col-auto col-md-4"} -->
-        <div class="wp-block-column is-vertically-aligned-center col-auto col-md-4">
-            <!-- wp:navigation {"openSubmenusOnClick":true,"fontSize":"small","textColor":"primary","overlayMenu":"mobile","overlayBackgroundColor":"primary","overlayTextColor":"white","layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"},"style":{"typography":{"fontStyle":"normal","fontWeight":"500","textTransform":"uppercase"}}} /-->
-        </div>
-        <!-- /wp:column -->
-    </div>
-    <!-- /wp:columns -->
-</div>
-<!-- /wp:group -->
+<!-- wp:pattern {"slug":"wecodeart/header"} /-->
