@@ -7,6 +7,7 @@ v6.2.8
 - Updated - blur backdrop-filter for modal style component
 - Updated - use default categories and add/rename Pages (for full pages), Elements (for small elements), WeCodeArt (all from theme)
 - Updated - fix pattern images with new inline style attribute
+- Updated - main header/footer template part to pattern (to make use of php/translation)
 - Added - core/list various icons styles
 - Added - core/image lightbox support
 - Added - lightbox for wecodeart( 'styles' )->Components to be loaded on demand
